generator/generatedG/GrammarParser.cpp

// Generated from Grammar.g4 by ANTLR 4.13.1


#include "../rule.hpp"



#include "GrammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct GrammarParserStaticData final {
  GrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GrammarParserStaticData(const GrammarParserStaticData&) = delete;
  GrammarParserStaticData(GrammarParserStaticData&&) = delete;
  GrammarParserStaticData& operator=(const GrammarParserStaticData&) = delete;
  GrammarParserStaticData& operator=(GrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag grammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
GrammarParserStaticData *grammarParserStaticData = nullptr;

void grammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (grammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(grammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<GrammarParserStaticData>(
    std::vector<std::string>{
      "grammar_", "rule_", "inhList", "retList", "variants", "production", 
      "productionElement", "ruleRef", "argsList", "token", "action"
    },
    std::vector<std::string>{
      "", "'['", "']'", "'returns'", "':'", "';'", "','", "'|'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "ID", "TOKEN", "SPACE", "CODE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  grammarParserStaticData = staticData.release();
}

}

GrammarParser::GrammarParser(TokenStream *input) : GrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

GrammarParser::GrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  GrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *grammarParserStaticData->atn, grammarParserStaticData->decisionToDFA, grammarParserStaticData->sharedContextCache, options);
}

GrammarParser::~GrammarParser() {
  delete _interpreter;
}

const atn::ATN& GrammarParser::getATN() const {
  return *grammarParserStaticData->atn;
}

std::string GrammarParser::getGrammarFileName() const {
  return "Grammar.g4";
}

const std::vector<std::string>& GrammarParser::getRuleNames() const {
  return grammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& GrammarParser::getVocabulary() const {
  return grammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView GrammarParser::getSerializedATN() const {
  return grammarParserStaticData->serializedATN;
}


//----------------- Grammar_Context ------------------------------------------------------------------

GrammarParser::Grammar_Context::Grammar_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::Grammar_Context::EOF() {
  return getToken(GrammarParser::EOF, 0);
}

std::vector<GrammarParser::Rule_Context *> GrammarParser::Grammar_Context::rule_() {
  return getRuleContexts<GrammarParser::Rule_Context>();
}

GrammarParser::Rule_Context* GrammarParser::Grammar_Context::rule_(size_t i) {
  return getRuleContext<GrammarParser::Rule_Context>(i);
}


size_t GrammarParser::Grammar_Context::getRuleIndex() const {
  return GrammarParser::RuleGrammar_;
}


GrammarParser::Grammar_Context* GrammarParser::grammar_() {
  Grammar_Context *_localctx = _tracker.createInstance<Grammar_Context>(_ctx, getState());
  enterRule(_localctx, 0, GrammarParser::RuleGrammar_);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GrammarParser::ID) {
      setState(22);
      rule_();
      setState(27);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(28);
    match(GrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Rule_Context ------------------------------------------------------------------

GrammarParser::Rule_Context::Rule_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::Rule_Context::ID() {
  return getToken(GrammarParser::ID, 0);
}

GrammarParser::VariantsContext* GrammarParser::Rule_Context::variants() {
  return getRuleContext<GrammarParser::VariantsContext>(0);
}

GrammarParser::InhListContext* GrammarParser::Rule_Context::inhList() {
  return getRuleContext<GrammarParser::InhListContext>(0);
}

GrammarParser::RetListContext* GrammarParser::Rule_Context::retList() {
  return getRuleContext<GrammarParser::RetListContext>(0);
}


size_t GrammarParser::Rule_Context::getRuleIndex() const {
  return GrammarParser::RuleRule_;
}


GrammarParser::Rule_Context* GrammarParser::rule_() {
  Rule_Context *_localctx = _tracker.createInstance<Rule_Context>(_ctx, getState());
  enterRule(_localctx, 2, GrammarParser::RuleRule_);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
     pfw::gen::Rule r; 
    setState(31);
    antlrcpp::downCast<Rule_Context *>(_localctx)->idToken = match(GrammarParser::ID);
     r.name = (antlrcpp::downCast<Rule_Context *>(_localctx)->idToken != nullptr ? antlrcpp::downCast<Rule_Context *>(_localctx)->idToken->getText() : ""); 
    setState(37);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GrammarParser::T__0) {
      setState(33);
      match(GrammarParser::T__0);
      setState(34);
      inhList(&r);
      setState(35);
      match(GrammarParser::T__1);
    }
    setState(44);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GrammarParser::T__2) {
      setState(39);
      match(GrammarParser::T__2);
      setState(40);
      match(GrammarParser::T__0);
      setState(41);
      retList(&r);
      setState(42);
      match(GrammarParser::T__1);
    }
    setState(46);
    match(GrammarParser::T__3);
    setState(47);
    variants(&r);
     AddRule(std::move(r)); 
    setState(49);
    match(GrammarParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InhListContext ------------------------------------------------------------------

GrammarParser::InhListContext::InhListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::InhListContext::InhListContext(ParserRuleContext *parent, size_t invokingState, pfw::gen::Rule* r)
  : ParserRuleContext(parent, invokingState) {
  this->r = r;
}

std::vector<tree::TerminalNode *> GrammarParser::InhListContext::ID() {
  return getTokens(GrammarParser::ID);
}

tree::TerminalNode* GrammarParser::InhListContext::ID(size_t i) {
  return getToken(GrammarParser::ID, i);
}

std::vector<GrammarParser::InhListContext *> GrammarParser::InhListContext::inhList() {
  return getRuleContexts<GrammarParser::InhListContext>();
}

GrammarParser::InhListContext* GrammarParser::InhListContext::inhList(size_t i) {
  return getRuleContext<GrammarParser::InhListContext>(i);
}


size_t GrammarParser::InhListContext::getRuleIndex() const {
  return GrammarParser::RuleInhList;
}


GrammarParser::InhListContext* GrammarParser::inhList(pfw::gen::Rule* r) {
  InhListContext *_localctx = _tracker.createInstance<InhListContext>(_ctx, getState(), r);
  enterRule(_localctx, 4, GrammarParser::RuleInhList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(51);
    antlrcpp::downCast<InhListContext *>(_localctx)->t = match(GrammarParser::ID);
    setState(52);
    antlrcpp::downCast<InhListContext *>(_localctx)->n = match(GrammarParser::ID);
     r->args.push_back(pfw::gen::Attribute((antlrcpp::downCast<InhListContext *>(_localctx)->t != nullptr ? antlrcpp::downCast<InhListContext *>(_localctx)->t->getText() : ""), (antlrcpp::downCast<InhListContext *>(_localctx)->n != nullptr ? antlrcpp::downCast<InhListContext *>(_localctx)->n->getText() : ""))); 
    setState(58);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(54);
        match(GrammarParser::T__5);
        setState(55);
        inhList(r); 
      }
      setState(60);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RetListContext ------------------------------------------------------------------

GrammarParser::RetListContext::RetListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::RetListContext::RetListContext(ParserRuleContext *parent, size_t invokingState, pfw::gen::Rule* r)
  : ParserRuleContext(parent, invokingState) {
  this->r = r;
}

std::vector<tree::TerminalNode *> GrammarParser::RetListContext::ID() {
  return getTokens(GrammarParser::ID);
}

tree::TerminalNode* GrammarParser::RetListContext::ID(size_t i) {
  return getToken(GrammarParser::ID, i);
}

std::vector<GrammarParser::RetListContext *> GrammarParser::RetListContext::retList() {
  return getRuleContexts<GrammarParser::RetListContext>();
}

GrammarParser::RetListContext* GrammarParser::RetListContext::retList(size_t i) {
  return getRuleContext<GrammarParser::RetListContext>(i);
}


size_t GrammarParser::RetListContext::getRuleIndex() const {
  return GrammarParser::RuleRetList;
}


GrammarParser::RetListContext* GrammarParser::retList(pfw::gen::Rule* r) {
  RetListContext *_localctx = _tracker.createInstance<RetListContext>(_ctx, getState(), r);
  enterRule(_localctx, 6, GrammarParser::RuleRetList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(61);
    antlrcpp::downCast<RetListContext *>(_localctx)->t = match(GrammarParser::ID);
    setState(62);
    antlrcpp::downCast<RetListContext *>(_localctx)->n = match(GrammarParser::ID);
     r->attrs.push_back(pfw::gen::Attribute((antlrcpp::downCast<RetListContext *>(_localctx)->t != nullptr ? antlrcpp::downCast<RetListContext *>(_localctx)->t->getText() : ""), (antlrcpp::downCast<RetListContext *>(_localctx)->n != nullptr ? antlrcpp::downCast<RetListContext *>(_localctx)->n->getText() : ""))); 
    setState(68);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(64);
        match(GrammarParser::T__5);
        setState(65);
        retList(r); 
      }
      setState(70);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariantsContext ------------------------------------------------------------------

GrammarParser::VariantsContext::VariantsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::VariantsContext::VariantsContext(ParserRuleContext *parent, size_t invokingState, pfw::gen::Rule* r)
  : ParserRuleContext(parent, invokingState) {
  this->r = r;
}

GrammarParser::ProductionContext* GrammarParser::VariantsContext::production() {
  return getRuleContext<GrammarParser::ProductionContext>(0);
}

std::vector<GrammarParser::VariantsContext *> GrammarParser::VariantsContext::variants() {
  return getRuleContexts<GrammarParser::VariantsContext>();
}

GrammarParser::VariantsContext* GrammarParser::VariantsContext::variants(size_t i) {
  return getRuleContext<GrammarParser::VariantsContext>(i);
}


size_t GrammarParser::VariantsContext::getRuleIndex() const {
  return GrammarParser::RuleVariants;
}


GrammarParser::VariantsContext* GrammarParser::variants(pfw::gen::Rule* r) {
  VariantsContext *_localctx = _tracker.createInstance<VariantsContext>(_ctx, getState(), r);
  enterRule(_localctx, 8, GrammarParser::RuleVariants);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(71);
    production(&r->variants);
    setState(76);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(72);
        match(GrammarParser::T__6);
        setState(73);
        variants(r); 
      }
      setState(78);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProductionContext ------------------------------------------------------------------

GrammarParser::ProductionContext::ProductionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::ProductionContext::ProductionContext(ParserRuleContext *parent, size_t invokingState, pfw::gen::Variants* v)
  : ParserRuleContext(parent, invokingState) {
  this->v = v;
}

std::vector<GrammarParser::ProductionElementContext *> GrammarParser::ProductionContext::productionElement() {
  return getRuleContexts<GrammarParser::ProductionElementContext>();
}

GrammarParser::ProductionElementContext* GrammarParser::ProductionContext::productionElement(size_t i) {
  return getRuleContext<GrammarParser::ProductionElementContext>(i);
}


size_t GrammarParser::ProductionContext::getRuleIndex() const {
  return GrammarParser::RuleProduction;
}


GrammarParser::ProductionContext* GrammarParser::production(pfw::gen::Variants* v) {
  ProductionContext *_localctx = _tracker.createInstance<ProductionContext>(_ctx, getState(), v);
  enterRule(_localctx, 10, GrammarParser::RuleProduction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
     pfw::gen::Production p; 
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2816) != 0)) {
      setState(80);
      productionElement(&p);
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
     v->push_back(std::move(p)); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProductionElementContext ------------------------------------------------------------------

GrammarParser::ProductionElementContext::ProductionElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::ProductionElementContext::ProductionElementContext(ParserRuleContext *parent, size_t invokingState, pfw::gen::Production* p)
  : ParserRuleContext(parent, invokingState) {
  this->p = p;
}

GrammarParser::RuleRefContext* GrammarParser::ProductionElementContext::ruleRef() {
  return getRuleContext<GrammarParser::RuleRefContext>(0);
}

GrammarParser::TokenContext* GrammarParser::ProductionElementContext::token() {
  return getRuleContext<GrammarParser::TokenContext>(0);
}

GrammarParser::ActionContext* GrammarParser::ProductionElementContext::action() {
  return getRuleContext<GrammarParser::ActionContext>(0);
}


size_t GrammarParser::ProductionElementContext::getRuleIndex() const {
  return GrammarParser::RuleProductionElement;
}


GrammarParser::ProductionElementContext* GrammarParser::productionElement(pfw::gen::Production* p) {
  ProductionElementContext *_localctx = _tracker.createInstance<ProductionElementContext>(_ctx, getState(), p);
  enterRule(_localctx, 12, GrammarParser::RuleProductionElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GrammarParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(88);
        ruleRef(p);
        break;
      }

      case GrammarParser::TOKEN: {
        enterOuterAlt(_localctx, 2);
        setState(89);
        token(p);
        break;
      }

      case GrammarParser::CODE: {
        enterOuterAlt(_localctx, 3);
        setState(90);
        action(p);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RuleRefContext ------------------------------------------------------------------

GrammarParser::RuleRefContext::RuleRefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::RuleRefContext::RuleRefContext(ParserRuleContext *parent, size_t invokingState, pfw::gen::Production* p)
  : ParserRuleContext(parent, invokingState) {
  this->p = p;
}

tree::TerminalNode* GrammarParser::RuleRefContext::ID() {
  return getToken(GrammarParser::ID, 0);
}

GrammarParser::ArgsListContext* GrammarParser::RuleRefContext::argsList() {
  return getRuleContext<GrammarParser::ArgsListContext>(0);
}


size_t GrammarParser::RuleRefContext::getRuleIndex() const {
  return GrammarParser::RuleRuleRef;
}


GrammarParser::RuleRefContext* GrammarParser::ruleRef(pfw::gen::Production* p) {
  RuleRefContext *_localctx = _tracker.createInstance<RuleRefContext>(_ctx, getState(), p);
  enterRule(_localctx, 14, GrammarParser::RuleRuleRef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
     pfw::gen::RuleRef rr; 
    setState(94);
    antlrcpp::downCast<RuleRefContext *>(_localctx)->idToken = match(GrammarParser::ID);
     rr.name = (antlrcpp::downCast<RuleRefContext *>(_localctx)->idToken != nullptr ? antlrcpp::downCast<RuleRefContext *>(_localctx)->idToken->getText() : ""); 
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GrammarParser::T__0) {
      setState(96);
      match(GrammarParser::T__0);
      setState(97);
      argsList(&rr);
      setState(98);
      match(GrammarParser::T__1);
    }
     p->push_back(std::move(rr)); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgsListContext ------------------------------------------------------------------

GrammarParser::ArgsListContext::ArgsListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::ArgsListContext::ArgsListContext(ParserRuleContext *parent, size_t invokingState, pfw::gen::RuleRef* rr)
  : ParserRuleContext(parent, invokingState) {
  this->rr = rr;
}

tree::TerminalNode* GrammarParser::ArgsListContext::CODE() {
  return getToken(GrammarParser::CODE, 0);
}

std::vector<GrammarParser::ArgsListContext *> GrammarParser::ArgsListContext::argsList() {
  return getRuleContexts<GrammarParser::ArgsListContext>();
}

GrammarParser::ArgsListContext* GrammarParser::ArgsListContext::argsList(size_t i) {
  return getRuleContext<GrammarParser::ArgsListContext>(i);
}


size_t GrammarParser::ArgsListContext::getRuleIndex() const {
  return GrammarParser::RuleArgsList;
}


GrammarParser::ArgsListContext* GrammarParser::argsList(pfw::gen::RuleRef* rr) {
  ArgsListContext *_localctx = _tracker.createInstance<ArgsListContext>(_ctx, getState(), rr);
  enterRule(_localctx, 16, GrammarParser::RuleArgsList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(104);
    antlrcpp::downCast<ArgsListContext *>(_localctx)->codeToken = match(GrammarParser::CODE);
     std::string s = (antlrcpp::downCast<ArgsListContext *>(_localctx)->codeToken != nullptr ? antlrcpp::downCast<ArgsListContext *>(_localctx)->codeToken->getText() : "");
                                         rr->args.push_back(pfw::gen::Arg(std::string(s.begin() + 1, s.end() - 1))); 
    setState(110);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(106);
        match(GrammarParser::T__5);
        setState(107);
        argsList(rr); 
      }
      setState(112);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TokenContext ------------------------------------------------------------------

GrammarParser::TokenContext::TokenContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::TokenContext::TokenContext(ParserRuleContext *parent, size_t invokingState, pfw::gen::Production* p)
  : ParserRuleContext(parent, invokingState) {
  this->p = p;
}

tree::TerminalNode* GrammarParser::TokenContext::TOKEN() {
  return getToken(GrammarParser::TOKEN, 0);
}


size_t GrammarParser::TokenContext::getRuleIndex() const {
  return GrammarParser::RuleToken;
}


GrammarParser::TokenContext* GrammarParser::token(pfw::gen::Production* p) {
  TokenContext *_localctx = _tracker.createInstance<TokenContext>(_ctx, getState(), p);
  enterRule(_localctx, 18, GrammarParser::RuleToken);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    antlrcpp::downCast<TokenContext *>(_localctx)->tokenToken = match(GrammarParser::TOKEN);
     p->push_back(pfw::gen::Token((antlrcpp::downCast<TokenContext *>(_localctx)->tokenToken != nullptr ? antlrcpp::downCast<TokenContext *>(_localctx)->tokenToken->getText() : ""))); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ActionContext ------------------------------------------------------------------

GrammarParser::ActionContext::ActionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::ActionContext::ActionContext(ParserRuleContext *parent, size_t invokingState, pfw::gen::Production* p)
  : ParserRuleContext(parent, invokingState) {
  this->p = p;
}

tree::TerminalNode* GrammarParser::ActionContext::CODE() {
  return getToken(GrammarParser::CODE, 0);
}


size_t GrammarParser::ActionContext::getRuleIndex() const {
  return GrammarParser::RuleAction;
}


GrammarParser::ActionContext* GrammarParser::action(pfw::gen::Production* p) {
  ActionContext *_localctx = _tracker.createInstance<ActionContext>(_ctx, getState(), p);
  enterRule(_localctx, 20, GrammarParser::RuleAction);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    antlrcpp::downCast<ActionContext *>(_localctx)->codeToken = match(GrammarParser::CODE);
     std::string s = (antlrcpp::downCast<ActionContext *>(_localctx)->codeToken != nullptr ? antlrcpp::downCast<ActionContext *>(_localctx)->codeToken->getText() : "");
                                         p->push_back(pfw::gen::Action(std::string(s.begin() + 1, s.end() - 1))); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void GrammarParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  grammarParserInitialize();
#else
  ::antlr4::internal::call_once(grammarParserOnceFlag, grammarParserInitialize);
#endif
}
